# onconova

./: .dockerignore  .env.prod  .env.sample  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.yml  export_openapi.sh  mkdocs.yml  nginx.conf  redocly.yaml
docs/: .gitignore  Dockerfile  README.md  index.md  mkdocs.yml  pyproject.toml
docs/api/: specification.md
docs/installation/: configuration.md
docs/scripts/: document_db.py  gen_credits_table.py  gen_db_schema_page.py  gen_ref_pages.py  gen_repo_pages.py
docs/src/: .dates_cache.jsonl  SUMMARY.md  credits.md  faq.md  index.md
docs/src/assets/css/: client-docs.css  home.css  style.css
docs/src/get-started/: configuration.md  installation.md  license.md  requirements.md
docs/src/guide/: about.md
docs/src/guide/api/: openapi.json  specification.md
docs/src/guide/database/: db_schema.md  migrations.md
docs/src/guide/developers/: contributing.md  microservices.md  plugins.md
docs/src/guide/security/: audit-trail.md  authentication.md  data-security.md  permissions.md
docs/src/reference/: client-docs.md
pop-docs/: .gitignore  Dockerfile  README.md  mkdocs.yml  nginx.conf  pyproject.toml
pop-docs/docs/: .dates_cache.jsonl  about.md  contributing.md  credits.md  faq.md  index.md  license.md
pop-docs/docs/api/: overview.md
pop-docs/docs/assets/: background.html  home.css
pop-docs/docs/assets/css/: style.css
pop-docs/docs/developers/: contributing.md
pop-docs/docs/get-started/: configuration.md  installation.md  license.md  requirements.md
pop-docs/docs/guide/: about.md
pop-docs/docs/guide/api/: overview.md  specification.md
pop-docs/docs/guide/database/: db_schema.md  migrations.md
pop-docs/docs/guide/developers/: contributing.md  microservices.md  plugins.md
pop-docs/docs/guide/security/: audit-trail.md  authentication.md  data-security.md  permissions.md
pop-docs/docs/installation/: quickstart.md  requirements.md
pop-docs/docs/security/: authentication.md  data_security.md
pop-docs/scripts/: dependencies_report.py  document_db.py  gen_ref_pages.py
pop-server/: Dockerfile  README.md  asgi.py  download.sh  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
pop-server/apps/core/: api.py
pop-server/apps/core/models/: BaseModel.py  CancerPatient.py  __init__.py  fields.py
pop-server/apps/terminology/: models.py
pop-server/pop/: api.py  asgi.py  settings.py  urls.py  wsgi.py
pop-server/pop/analytics/: analysis.py  builder.py  controllers.py  datasets.py  models.py  schemas.py
pop-server/pop/analytics/controllers/: __init__.py  analysis.py  cohort.py  cohort_builder.py  datasets.py  statistics.py
pop-server/pop/analytics/migrations/: 0002_dataset.py  0003_cohortevent_datasetevent_remove_cohort_created_at_and_more.py  0004_remove_cohort_create_insert_and_more.py
pop-server/pop/analytics/models/: __init__.py  cohort.py  dataset.py
pop-server/pop/analytics/schemas/: __init__.py  cohort.py  cohort_builder.py  datasets.py  statistics.py
pop-server/pop/cohorts/: analysis.py  builder.py  controllers.py  datasets.py  models.py  schemas.py
pop-server/pop/cohorts/controllers/: analysis.py  cohort.py  datasets.py  statistics.py
pop-server/pop/cohorts/migrations/: 0001_initial.py  0002_cohort_cases.py  0002_dataset.py  0003_cohortevent_datasetevent_remove_cohort_created_at_and_more.py  0004_remove_cohort_create_insert_and_more.py  0005_remove_cohort_create_insert_and_more.py
pop-server/pop/cohorts/models/: cohort.py  dataset.py
pop-server/pop/cohorts/schemas/: analysis.py  cohort.py  datasets.py
pop-server/pop/core/: aggregates.py  api.py  controllers.py  filters.py  healthcheck.py  measures.py  middleware.py  models.py  permissions.py  schemas.py  security.py  transforms.py  types.py  utils.py
pop-server/pop/core/anonymization/: __init__.py  base.py  decorator.py
pop-server/pop/core/auth/: controllers.py  models.py  permissions.py  schemas.py  token.py
pop-server/pop/core/history/: middleware.py  schemas.py
pop-server/pop/core/measures/: __init__.py  controllers.py  fields.py  measures.py  schemas.py
pop-server/pop/core/migrations/: 0001_initial.py  0002_alter_cancerpatient_created_at_and_more.py  0002_user_department_user_organization_user_title.py  0003_remove_user_access_level_must_be_between_1_and_6_and_more.py  0004_alter_user_access_level.py  0005_alter_user_managers.py  0008_remove_user_access_level_must_be_between_1_and_4_and_more.py
pop-server/pop/core/models/: BaseModel.py  CancerPatient.py  base.py  user.py  utils.py
pop-server/pop/core/schemas/: __init__.py  auth.py  base.py  factory.py  fields.py  filters.py  metaclass.py  mixin.py  others.py  schemas.py  user.py
pop-server/pop/core/serialization/: base.py  factory.py  fields.py  filters.py  metaclasses.py  mixins.py  ordering.py  transforms.py
pop-server/pop/interoperability/: controllers.py  parsers.py  schemas.py
pop-server/pop/oncology/controllers/: AdverseEvent.py  CancerPatientController.py  Comorbidities.py  FamilyHistory.py  GenomicSignature.py  GenomicVariant.py  Lifestyle.py  NeoplasticEntity.py  PatientCase.py  PerformanceStatus.py  Radiotherapy.py  RiskAssessment.py  Staging.py  Surgery.py  SystemicTherapy.py  TherapyLine.py  TreatmentResponse.py  TumorBoard.py  TumorMarker.py  Vitals.py  __init__.py  adverse_event.py  bundle.py  comorbidities.py  family_history.py  genomic_signature.py  genomic_variant.py  lifestyle.py  neoplastic_entity.py  patient_case.py  radiotherapy.py  (+10 more)
pop-server/pop/projects/: controllers.py  models.py  schemas.py
pop-server/pop/research/: analysis.py  compilers.py  controllers.py  schemas.py
pop-server/pop/terminology/: controllers.py  digestors.py  fhir.py  fields.py  models.py  resolver.py  schemas.py  services.py  special.py  utils.py
pop-server/pop/tests/: common.py  conftest.py  factories.py  models.py  settings.py
pop-server/test/: conftest.py  factories.py
pop-server/test/core/: test_api.py  test_schemas.py
pop-server/test/terminology/: test_utils.py
(+3876 files in other folders)
