[tool.poetry]
name = "docs"
version = "1.0.0"
description = "The Precision Oncology Program (Onconova) is a joint at the University Hospital Zurich (USZ) to capture clinical data from oncology patients in a structured manner. The final aim of the project is to enable aggregated data analysis interactively."
license = "MIT"
authors = ["Luis Fabregas-Ibanez <Luis.Fabregas-Ibanez@usz.ch>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~=3.11"
mkdocs-material = "9.6.14"
neoteroi-mkdocs = "1.1.2"
mkdocstrings = {extras = ["python"], version = "0.29.1"}
mkdocs-literate-nav = "0.6.1"
mkdocs-gen-files= "0.5.0"
mkdocs-document-dates = "3.1.3"




